crates/rome_js_formatter/tests/specs/prettier/js/sloppy-mode/eval-arguments.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: eval-arguments.js

---
# Input
```js
function myfunc() {
  eval = 1
  arguments = arguments;
}

```

# Output
```js
function myfunc() {
  eval = 1;
  arguments = arguments;
}

```

# Errors
```
error[SyntaxError]: Illegal use of `eval` as an identifier in strict mode
  ┌─ eval-arguments.js:2:3
  │
2 │   eval = 1
  │   ^^^^

error[SyntaxError]: Illegal use of `arguments` as an identifier in strict mode
  ┌─ eval-arguments.js:3:3
  │
3 │   arguments = arguments;
  │   ^^^^^^^^^


```


